Fix header vertical alignment

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -20,30 +20,35 @@ $Header-breakpoint: 960px;
 .Header-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+
   width: 100%;
   max-width: $grid-size;
-}
-
-.Header-firstRow {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-
-  width: 100%;
-
-  margin-bottom: $size-large;
 
   @media(min-width: $Header-breakpoint) {
     flex-direction: row;
   }
 }
 
-.Header-secondRow {
-  align-self: center;
+.Header-firstCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 
   @media(min-width: $Header-breakpoint) {
-    align-self: flex-end;
+    flex-direction: row;
+  }
+}
+
+.Header-secondCol {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+  @media(min-width: $Header-breakpoint) {
+    align-items: flex-start;
   }
 }
 
@@ -73,8 +78,7 @@ $Header-breakpoint: 960px;
 }
 
 .Header-title,
-.Header-text,
-.Header-cta {
+.Header-text {
   margin-bottom: $size-large;
 }
 
@@ -90,5 +94,13 @@ $Header-breakpoint: 960px;
     display: initial;
 
     margin-right: $size-xsmall;
+  }
+}
+
+.Header-img {
+  margin-bottom: $size-large;
+
+  @media(min-width: $Header-breakpoint) {
+    margin-bottom: 0;
   }
 }
